# parameterized-vertex-cover

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
include/: param_vc.h
src/: main.cpp
src/tests/: test.cpp
